# Hackathon-II-Todo-Spec-Driven-Development-

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  FINAL_CHECKLIST.md  README.md  SUBMISSION.md
.github/workflows/: ci.yaml  deploy-cloud.yaml
.specify/memory/: constitution.md
docs/validation/: phase-17.5-monitoring.md
frontend/: .dockerignore  .env.local.example  .env.production  next.config.js  package-lock.json  package.json  tsconfig.json
helm/todo-app/: Chart.yaml  README.md  values-cloud.yaml  values-local.yaml  values.yaml
history/adr/: ADR-001-ai-agent-mcp-tool-architecture.md
infra/dapr/: configuration.yaml
scripts/: test-health-endpoints.sh  test-metrics-endpoints.sh  test-metrics-increment.sh
services/: README.md
services/audit-service/: Dockerfile  pyproject.toml
services/notification-service/: Dockerfile  pyproject.toml
services/notification-service/app/: __init__.py  handlers.py  idempotency.py  main.py  notifier.py
services/recurring-task-service/: Dockerfile  pyproject.toml
services/recurring-task-service/app/: __init__.py  generator.py  handlers.py  idempotency.py  main.py
specs/001-todo-cli-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-Local-Kubernetes-Deployment/: data-model.md  plan.md  quickstart.md  research.md
src/: main.py
(+163 files in other folders)
