# Recurring Task Service - Phase V Consumer
# SAFE MODE: New file only

[project]
name = "recurring-task-service"
version = "0.1.0"
description = "Phase V recurring task service - generates next occurrences"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cloudevents>=1.11.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
